--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,11 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      ".github/",
+      ".firebaserc",
+      "README.md",
+      ".gitignore"
     ],
     "rewrites": [
       {
