--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,14 +13,33 @@ permissions:
   contents: read
   pull-requests: write
 jobs:
-  build_and_preview:
-    #if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js (para rodar Firebase CLI)
+        uses: actions/setup-node@v3
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LINKS_IMPERIUM_LARP }}
-          projectId: links-imperium-larp
-      run: firebase deploy --only hosting --project links-imperium-larp
+          node-version: '18'
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Deploy to Firebase Hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --only hosting --project links-imperium-larp
+# jobs:
+#   build_and_preview:
+#     #if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: FirebaseExtended/action-hosting-deploy@v0
+#         with:
+#           repoToken: ${{ secrets.GITHUB_TOKEN }}
+#           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LINKS_IMPERIUM_LARP }}
+#           projectId: links-imperium-larp
+#       run: firebase deploy --only hosting --project links-imperium-larp
