teste github actions

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,38 +8,15 @@ on:
     branches:
       - main
 
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
 jobs:
-  deploy:
+  build_and_preview:
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js (para rodar Firebase CLI)
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - run: npm ci && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          node-version: '18'
-
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      - name: Deploy to Firebase Hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: firebase deploy --only hosting --project links-imperium-larp
-# jobs:
-#   build_and_preview:
-#     #if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - uses: FirebaseExtended/action-hosting-deploy@v0
-#         with:
-#           repoToken: ${{ secrets.GITHUB_TOKEN }}
-#           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LINKS_IMPERIUM_LARP }}
-#           projectId: links-imperium-larp
-#       run: firebase deploy --only hosting --project links-imperium-larp
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LINKS_IMPERIUM_LARP }}'
+          projectId: links-imperium-larp
